--- a/Release/drcom-client.conf
+++ b/Release/drcom-client.conf
@@ -1,9 +1,9 @@
 auto=false
 automin=false
-first_run=false
+first_run=true
 mac=98:83:89:25:80:99
-name=wanghl5516
-passwd=owyrtq558
+name=
+passwd=
 remember=true
 server=10.100.61.3
 server_changeable=false
